add sponsor image as link

--- a/web/sites/default/config/core.entity_form_display.node.sponsor.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.sponsor.default.yml
@@ -3,29 +3,29 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.sponsor.field_company_homepage
+    - field.field.node.sponsor.field_logo
     - node.type.sponsor
   module:
     - image
     - path
-    - text
 id: node.sponsor.default
 targetEntityType: node
 bundle: sponsor
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 31
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 10
     settings: {  }
     third_party_settings: {  }
+  field_company_homepage:
+    weight: 33
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
   field_logo:
     weight: 32
     settings:
