--- a/web/sites/default/config/core.entity_view_display.node.sponsor.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.sponsor.default.yml
@@ -3,22 +3,24 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.sponsor.field_company_homepage
+    - field.field.node.sponsor.field_logo
     - node.type.sponsor
   module:
     - image
-    - text
     - user
 id: node.sponsor.default
 targetEntityType: node
 bundle: sponsor
 mode: default
 content:
-  body:
-    type: text_default
-    weight: 101
-    settings: {  }
+  field_company_homepage:
+    weight: 103
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
-    label: hidden
+    type: string
   field_logo:
     type: image
     weight: 102
