--- a/web/sites/default/config/block.block.saunacamp_account_menu.yml
+++ b/web/sites/default/config/block.block.saunacamp_account_menu.yml
@@ -1,6 +1,6 @@
 uuid: 0f1558d5-3008-408d-a10b-119a91dba0b0
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - system.menu.account
@@ -10,7 +10,7 @@ dependencies:
     - saunacamp
 id: saunacamp_account_menu
 theme: saunacamp
-region: header
+region: '-1'
 weight: 0
 provider: null
 plugin: 'system_menu_block:account'
