--- a/web/sites/default/config/block.block.saunacamp_breadcrumbs.yml
+++ b/web/sites/default/config/block.block.saunacamp_breadcrumbs.yml
@@ -1,6 +1,6 @@
 uuid: 89bcd1db-289f-4cf0-9006-6a3c4bd1ae25
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - system
@@ -8,7 +8,7 @@ dependencies:
     - saunacamp
 id: saunacamp_breadcrumbs
 theme: saunacamp
-region: header
+region: '-1'
 weight: 0
 provider: null
 plugin: system_breadcrumb_block
