--- a/web/sites/default/config/block.block.saunacamp_search.yml
+++ b/web/sites/default/config/block.block.saunacamp_search.yml
@@ -1,6 +1,6 @@
 uuid: bce7755b-eba6-484e-bd2c-4457f6c4f304
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -8,7 +8,7 @@ dependencies:
     - saunacamp
 id: saunacamp_search
 theme: saunacamp
-region: header
+region: '-1'
 weight: -1
 provider: null
 plugin: search_form_block
