--- a/web/sites/default/config/core.entity_view_display.node.presentation.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.presentation.default.yml
@@ -3,34 +3,47 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.presentation.body
+    - field.field.node.presentation.field_name
+    - field.field.node.presentation.field_nickname
     - field.field.node.presentation.field_presenter
     - node.type.presentation
   module:
     - image
-    - text
+    - link
     - user
 id: node.presentation.default
 targetEntityType: node
 bundle: presentation
 mode: default
 content:
-  body:
-    type: text_default
-    weight: 101
-    settings: {  }
+  field_name:
+    type: string
+    weight: 2
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    label: hidden
+  field_nickname:
+    type: link
+    weight: 3
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
     third_party_settings: {  }
     label: hidden
   field_presenter:
     type: image
-    weight: 102
+    weight: 1
     settings:
       image_style: ''
       image_link: ''
     third_party_settings: {  }
     label: hidden
   links:
-    weight: 100
+    weight: 0
     settings: {  }
     third_party_settings: {  }
 hidden: {  }
