--- a/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_presentation
     - node.type.page
   module:
     - text
@@ -23,4 +24,5 @@ content:
     third_party_settings: {  }
   links:
     weight: 101
-hidden: {  }
+hidden:
+  field_presentation: true
